--- a/ml/eda_analysis.ipynb
+++ b/ml/eda_analysis.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "image_class.ipynb",
       "provenance": [],
-      "private_outputs": true
+      "private_outputs": true,
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ml-heroes/image_class/blob/master/ml/eda_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -180,6 +192,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "import matplotlib.cm as cm\n",
+        "from pathlib import Path\n",
         "\n",
         "color = sns.color_palette()\n",
         "%matplotlib inline\n",
@@ -207,18 +220,9 @@
       },
       "source": [
         "# Set the seed for hash based operations in python\n",
+        "SEED = 24\n",
         "os.environ['PYTHONHASHSEED'] = '0'\n",
-        "\n",
-        "seed=1234\n",
-        "\n",
-        "# Set the numpy seed\n",
-        "np.random.seed(seed)\n",
-        "\n",
-        "# Set the random seed in tensorflow at graph level\n",
-        "tf.random.set_seed(seed)\n",
-        "\n",
-        "# Make the augmentation sequence deterministic\n",
-        "aug.seed(seed)"
+        "np.random.seed(SEED)"
       ],
       "execution_count": null,
       "outputs": []
@@ -232,6 +236,21 @@
       "source": [
         "##  Load dataset and process it"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5uhBXL5nIM9g",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#  Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -697,7 +716,7 @@
       },
       "source": [
         "def sample_data(df, label, size=10):\n",
-        "  samples = df.loc[df['label'] == label].sample(size)\n",
+        "  samples = df.loc[df['label'] == label].sample(size, random_state=SEED)\n",
         "  return samples"
       ],
       "execution_count": null,
