--- a/ml/eda_analysis.ipynb
+++ b/ml/eda_analysis.ipynb
@@ -208,7 +208,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Make our results reproducible"
+        "## Make results reproducible"
       ]
     },
     {
@@ -958,86 +958,6 @@
       },
       "source": [
         "> *ImageNet: Xception has the Highest Accuracy*"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "K1aIUuv5-foA",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Model"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "a4T3M3yxfhbp",
-        "colab_type": "text"
-      },
-      "source": [
-        "> Describe model structure here"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VFxI1dMPf3IV",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Training"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "I0j2o_RX_6lw",
-        "colab_type": "text"
-      },
-      "source": [
-        "> Describe how model is trained"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "BDTzShxpf5dT",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Analysis"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cgzEuTEs_9gs",
-        "colab_type": "text"
-      },
-      "source": [
-        "> Show graphs and results here"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ASoTLvHQf7qm",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Conclusion"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ChNJQFTuAAiv",
-        "colab_type": "text"
-      },
-      "source": [
-        "> Final Analysis"
       ]
     },
     {
